feat: api ticket show, statistics
